--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
 
   <div class="cover">
     <!-- task 1: update the header for your quiz -->
-    <h1> Which [ ] Character Are You? </h1>
+    <h1> Which Which Subway route one of the 4 subway routes are you? </h1>
 
     <!-- task 2: update the cover photo for your quiz -->
-    <img class="coverPhoto" src="https://media.sproutsocial.com/uploads/2018/04/Facebook-Cover-Photo-Size.png">
+    <img class="coverPhoto" src="images/NYCSM.jpg">
   </div>
 
   <!-- task 3: Update the questions for your quiz. Be sure to have AT LEAST three to ask the user. Add more questions if you want!-->
    <div class="questions">
-    <h3> 1. [Question 1] </h3>
+    <h3> 1. How are you feeling? </h3>
     <input class="q1">
     </br>
-    <h3> 2. [Question 2] </h3>
+    <h3> 2. Out of these 4 what is your favorite neighborhood? </h3>
     <input class="q2">
     </br>
-    <h3> 3. [Question 3] </h3>
+    <h3> 3. Do you feel like you're always punctual (on time?) </h3>
     <input class="q3">
+  </div>
+  <h3> 4. What time of the day do you work the best at? </h3>
+    <input class="q4">
   </div>
   </br>
 
