--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="cover">
     <!-- task 1: update the header for your quiz -->
-    <h1> Which Which Subway route one of the 4 subway routes are you? </h1>
+    <h1> Which of the four subway routes below are you? </h1>
 
     <!-- task 2: update the cover photo for your quiz -->
     <img class="coverPhoto" src="images/NYCSM.jpg">
@@ -35,7 +35,9 @@
     <h3> 1. How are you feeling? </h3>
     <input class="q1">
     </br>
-    <h3> 2. Out of these 4 what is your favorite neighborhood? </h3>
+    <h3> 2. Out of these 4 what is your favorite neighborhood? 
+      <br> (Long Island City,Downtown Brooklyn, Midtown, or Park Slope)
+    </h3>
     <input class="q2">
     </br>
     <h3> 3. Do you feel like you're always punctual (on time?) </h3>
@@ -48,6 +50,7 @@
 
   <div class="displayResult">
     <button class="submit"> Submit!</button>
+    <img class="display">
   </div>
   </br>
   <script src="script.js"></script>
